# python-algorithm

./: .breakpoints  .gitignore  .replit  pyproject.toml
algorithm/: Algorithm.py
datascience/: Display-Brand.xlsx  SEARCH_BRAND.xlsx  data.csv  data.json  file.py  log.py  medicine.xlsx  panda.py  ticket.csv
ds/: ds.py
insta-scrape-2.1.2/insta-scrape-2.1.2/: PKG-INFO
insta-scrape-2.1.2/insta-scrape-2.1.2/insta_scrape.egg-info/: PKG-INFO  SOURCES.txt
list/: .List.py.swp  .singlelist.py.swp  List.py  customlist.py  singlelist.py
numpy/: apify.py  index.hmlt  insta.py  instagram.py  libnumpy.py  numpyfunction.py
oop/: .Cuboid.py.swp  .inheritance.py.swp  Cuboid.py  Rectangle.py  inheritance.py
python-funtion/: comprehension.py  function.py  operatingsystem.py
python-funtion/panda/: duplicate_record.py  file.xlsx
sorting/: .sorting.py.swp  sorting.py
syntax/: .file.txt.swp  blog.txt  demo.txt  filehandling.py  syntax.py
taskon/: auth.py
tree/: tree.py
