[tool.poetry]
name = "python-algorithm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_algorithm"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
